--- a/index.html
+++ b/index.html
@@ -1599,7 +1599,7 @@ function jsonGenerate(){
         case "35T":
             bn = "309th";
             co = "C";
-            break:
+            break;
     }
   }
   
