--- a/index.html
+++ b/index.html
@@ -1548,6 +1548,7 @@ function csvGenerateStudent(data, header = false, sepField = ",", sepRow = "\r\n
   j.smPhone = ph;
   
   j.smShift = "Day";
+  j.smBuilding = "84402";
   j.smPhaseLvl = "BLACK";
   j.smCitizenship = "US";
   
