--- a/index.html
+++ b/index.html
@@ -1551,7 +1551,7 @@ function csvGenerateStudent(data, header = false, sepField = ",", sepRow = "\r\n
   j.smBuilding = "84402";
   j.smPhaseLvl = "BLACK";
   j.smCitizenship = "US";
-  
+  j.Class_num = "HOLD UNDER";
   j.Academic_Probation = "No";
   j.Recycle = "No";
   j.SASH = "No";
