--- a/index.html
+++ b/index.html
@@ -1232,6 +1232,8 @@ If you are married, your orders says Dependents: Yes, and your MOS is longer tha
 
 <br><br>Facilities:
 <br><a href="tel:520-533-1608">520-533-1608</a><label> - DEERS</label>
+<br><a href="https://www.tricare.mil/Plans/Eligibility/DEERS/RequiredDocuments">Required Documents to enroll dependents (spouse, child, fam. members, etc.)</a>
+<br>
 <br><a href="tel:520-533-4723">520-533-4723</a><label> - Eifler Gym</label>
 <br><a href="tel:520-732-6933">520-732-6933</a><label> - Education Center</label>
 
