--- a/index.html
+++ b/index.html
@@ -1011,17 +1011,8 @@ If you are married, your orders says Dependents: Yes, and your MOS is longer tha
 <br><br>Required documents:
 <ul>
     <li>Orders bringing you to FH</li>
-    <li>LES</li>
-    <a href="https://mypay.dfas.mil/" target="_blank">myPay - LES, TSP, W2</a>
-    <br><br>
-    <li>DD1172</li>
-    <br>DEERS enrollment of your family members. If you don't have an official form, you should set an appointment.
-    <br><a href="https://idco.dmdc.osd.mil/idco/" target="_blank">DEERS-RAPIDS ID Card Office Online</a>
-<br>If setting the appointment gives you an error, try removing the dashes from your phone number.
-    <br>
-    <br>However, to prevent delays in the process, if your family members have an ID you can go to:
-    <br><a href="https://www.dmdc.osd.mil/self_service/rapids/unauthenticated?execution=e1s1" target="_blank">https://www.dmdc.osd.mil/self_service/rapids/unauthenticated?execution=e1s1</a>
-    <br>Then go to: Print Family List. I'll give you a digital DD1172.
+    <li><a href="#Finance">LES</a></li>
+    <li><a href="#DEERS">DD1172 - DEERS</a></li>
     
     
 </ul>
@@ -1030,8 +1021,8 @@ If you are married, your orders says Dependents: Yes, and your MOS is longer tha
 <ul>
     <li>Orders bringing you to FH</li>
     <li>Marriage certificate</li>
-    <li>LES - the last 3</li>
-    <li>DD1172</li>
+    <li><a href="#Finance">LES</a> - the last 3</li>
+    <li><a href="#DEERS">DD1172 - DEERS</a></li>
     <li>Lease</li>
     <li>Move out memo from the commander. The DS will generate it.</li>
     <li>Move out counseling from the DS.</li>
@@ -1212,10 +1203,10 @@ If you are married, your orders says Dependents: Yes, and your MOS is longer tha
 <br><a href="tel:520-458-3330">520-458-3330</a><label> - AZ World Shuttle</label>
 
 
-<br><br>SHARP
+<br><br><details id="DEERS"><summary>SHARP
 <br><a href="tel:1-877-995-5247">1-877-995-5247</a><label> - DoD Safe Helpline (24/7)</label>
 <br><a href="tel:520-732-3736">520-732-3736</a><label> - Ft. Huachuca SH/SA Hotline (24/7)</label> 
-<br><a href="tel:520-538-5971">520-538-5971</a><label> - Garrison SARC/SHARP</label>
+<br><a href="tel:520-538-5971">520-538-5971</a><label> - Garrison SARC/SHARP</label></summary>
 
 <br><br>Give the DS a heads up (for accountability purposes, you don't need to disclose the reason), that you want to talk with the SARC or VA 
 <br><br>111th MI BDE SARC - SFC Pennington, Saquawia V.
@@ -1229,11 +1220,20 @@ If you are married, your orders says Dependents: Yes, and your MOS is longer tha
 <br>
 <br><a href="https://www.instagram.com/rapid_bde" target="_blank">https://www.instagram.com/rapid_bde</a>
 <br>
+</details>
 
 <br><br>Facilities:
-<br><a href="tel:520-533-1608">520-533-1608</a><label> - DEERS</label>
+<br><details id="DEERS"><summary><a href="tel:520-533-1608">520-533-1608</a> - DEERS</summary>
 <br><a href="https://www.tricare.mil/Plans/Eligibility/DEERS/RequiredDocuments">Required Documents to enroll dependents (spouse, child, fam. members, etc.)</a>
+<br>If you don't have an official DD1172 form, you should set an appointment.
+<br><a href="https://idco.dmdc.osd.mil/idco/" target="_blank">DEERS-RAPIDS ID Card Office Online</a>
+<br>If setting the appointment gives you an error, try removing the dashes from your phone number.
 <br>
+<br>However, to prevent delays in the process, if your family members have an ID you can go to:
+<br><a href="https://www.dmdc.osd.mil/self_service/rapids/unauthenticated?execution=e1s1" target="_blank">https://www.dmdc.osd.mil/self_service/rapids/unauthenticated?execution=e1s1</a>
+<br>Then go to: Print Family List. I'll give you a digital DD1172.
+<br>
+</details>
 <br><a href="tel:520-533-4723">520-533-4723</a><label> - Eifler Gym</label>
 <br><a href="tel:520-732-6933">520-732-6933</a><label> - Education Center</label>
 
@@ -1252,10 +1252,11 @@ If you are married, your orders says Dependents: Yes, and your MOS is longer tha
 <br><a href="tel:520-533-2009">520-533-2009</a>
 <br><a href="tel:520-533-3208">520-533-3208</a>
 
-<br><br>Finance
+<br><br><details id="Finance"><summary>Finance
 <br><a href="tel:520-538-5762">520-538-5762</a>
-<br><a href="tel:520-538-2982">520-538-2982</a>
-
+<br><a href="tel:520-538-2982">520-538-2982</a></summary>
+<a href="https://mypay.dfas.mil/" target="_blank">myPay - LES, TSP, W2</a>
+</details>
 <br><br>ACS:
 <br><a href="tel:520-533-2330">520-533-2330</a>
 <br><a href="tel:520-533-5719">520-533-5719</a>
