--- a/index.html
+++ b/index.html
@@ -1106,7 +1106,8 @@ If you are married, your orders says Dependents: Yes, and your MOS is longer tha
 <label>CQ Phone: </label><a href="tel:520-533-6401">520-533-6401</a>
 <br><label>Co Email: </label><a href="mailto:charlie309th@gmail.com">charlie309th@gmail.com</a>
 <br><a href="https://www.facebook.com/ComancheCompany309th" target="_blank">C Co, 309th Facebook page</a>
-
+<br>
+<br><a href="https://drive.google.com/file/d/1w2tOjSq-ifaubtxphW2Y-TXNfpfcR6o6/view?usp=sharing">35T OML - Class start roster</a>
 <br>
 <br>309th BN Moto: Sentinels of Security
 <br>309th BN Response: Sentinel Pride!
