--- a/index.html
+++ b/index.html
@@ -953,6 +953,7 @@ border: solid 2px;
 <ul>
     <li>You may go to the shoppette or order food after 1830 on duty days.</li>
     <li>You may go to the post office or dry cleaners during the duty day with permission from the DS.</li>
+    <li>Keep a list of all the places (dates, address, supervisor, and a phone number) you have lived at since you joined the military (including BCT). You are going to need it later to renew your clearance.</li>
 </ul>
 </fieldset>
 <fieldset><legend>Dont's</legend>
@@ -1235,7 +1236,35 @@ If you are married, your orders says Dependents: Yes, and your MOS is longer tha
 <br>Then go to: Print Family List. I'll give you a digital DD1172.
 <br>
 </details>
-<br><a href="tel:520-533-4723">520-533-4723</a><label> - Eifler Gym</label>
+<br>
+<details><summary><a href="tel:520-533-4723">520-533-4723</a><label> - Eifler Gym</label></summary>
+<br>Barnes Field House
+<br>M-F
+<br>0500-0800: Military only - Mask required
+<br>0800-1530: Everyone - Mask required
+<br>1530-1600: Closed - Everyone must leave
+<br>1600-2000: Everyone vaccinated - No mask - Need ID and COVID card
+<br>
+<br>Saturday
+<br>0800-1200: Everyone vaccinated (M-F 1600-2000 rules apply)
+<br>1200-1700: Everyone - Mask required
+<br>
+<br>Sunday
+<br>0800-1700: Everyone - Mask required
+<br>
+<br>
+<br>Eifler Gym
+<br>M-F
+<br>0500-0800: Military only - Mask required
+<br>0800-2000: Everyone - Mask required
+<br>
+<br>Saturday
+<br>0800-1600: Everyone - Mask required
+<br>
+<br>Sunday
+<br>Closed
+
+</details>
 <br><a href="tel:520-732-6933">520-732-6933</a><label> - Education Center</label>
 
 <br><br><a href="tel:520-533-1144">520-533-1144</a><label> - IG (Inspector General)</label>
