--- a/index.html
+++ b/index.html
@@ -1000,7 +1000,8 @@ border: solid 2px;
 
 <br>
 <br>In-Processing: Monday @ 0700 @ Eifler Gym // Eat breakfast before you go there.
-<br>Uniform: ACU (OCP), with In-Processing packet, BCT Packet, 5x copies of orders, 2x copies of DA31
+<br>Uniform: ACU (OCP)
+<br>Bring: In-Processing packet, BCT Packet, 5x copies of orders, 2x copies of DA31
 
 <br><br>
 <fieldset><details open><summary>Housing</summary>
@@ -1205,7 +1206,7 @@ If you are married, your orders says Dependents: Yes, and your MOS is longer tha
 <br><a href="tel:520-458-3330">520-458-3330</a><label> - AZ World Shuttle</label>
 
 
-<br><br><details id="DEERS"><summary>SHARP
+<br><br><details id="SHARP"><summary>SHARP
 <br><a href="tel:1-877-995-5247">1-877-995-5247</a><label> - DoD Safe Helpline (24/7)</label>
 <br><a href="tel:520-732-3736">520-732-3736</a><label> - Ft. Huachuca SH/SA Hotline (24/7)</label> 
 <br><a href="tel:520-538-5971">520-538-5971</a><label> - Garrison SARC/SHARP</label></summary>
@@ -1226,7 +1227,9 @@ If you are married, your orders says Dependents: Yes, and your MOS is longer tha
 
 <br><br>Facilities:
 <br><details id="DEERS"><summary><a href="tel:520-533-1608">520-533-1608</a> - DEERS</summary>
-<br><a href="https://www.tricare.mil/Plans/Eligibility/DEERS/RequiredDocuments">Required Documents to enroll dependents (spouse, child, fam. members, etc.)</a>
+<br><a href="https://www.tricare.mil/Plans/Eligibility/DEERS/RequiredDocuments">Required Documents to enroll dependents (spouse, child, fam. members, etc.) - Tricare</a>
+<br><a href="https://home.army.mil/huachuca/index.php/about/Garrison/directorate-human-resources/military-personnel-division/deersid-cards">More dependent related info - DEERS-Huachuca</a>
+<br>
 <br>If you don't have an official DD1172 form, you should set an appointment.
 <br><a href="https://idco.dmdc.osd.mil/idco/" target="_blank">DEERS-RAPIDS ID Card Office Online</a>
 <br>If setting the appointment gives you an error, try removing the dashes from your phone number.
@@ -1245,7 +1248,7 @@ If you are married, your orders says Dependents: Yes, and your MOS is longer tha
 <br>1530-1600: Closed - Everyone must leave
 <br>1600-2000: Everyone vaccinated - No mask - Need ID and COVID card
 <br>
-<br>Saturday
+<br>Saturday-Holidays
 <br>0800-1200: Everyone vaccinated (M-F 1600-2000 rules apply)
 <br>1200-1700: Everyone - Mask required
 <br>
